--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,22 +9,22 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 enable_testing()
 
-
 set(PROJECT_SOURCE_DIR "src")
+set(PROJECT_SOURCE_LIB_MODULE "${PROJECT_SOURCE_DIR}/ecs")
 set(PROJECT_INCLUDE_DIR "include")
 set(PROJECT_SPHINX_DIR "docs_sphinx")
 set(PROJECT_TEST_DIR "tests")
 
 file (GLOB SRC_FILES
-  "${PROJECT_SOURCE_DIR}/*.cpp")
+  "${PROJECT_SOURCE_LIB_MODULE}/*.cpp")
 
 file (GLOB INCLUDE_FILES
   "${PROJECT_INCLUDE_DIR}/*.h*")
 
 file (GLOB TEST_FILES
-  "${PROJECT_TEST_DIR}/*.cpp*")
+  "${PROJECT_TEST_DIR}/*.cpp")
 
-add_executable(project ${SRC_FILES} ${INCLUDE_FILES})
+add_executable(project "${PROJECT_SOURCE_DIR}/main.cpp" ${SRC_FILES} ${INCLUDE_FILES})
 
 target_link_libraries(project PUBLIC )
 
@@ -35,8 +35,8 @@ add_executable(tests ${SRC_FILES} ${INCLUDE_FILES})
 target_link_libraries(tests PRIVATE Catch2 Catch2::Catch2WithMain)
 
 # These tests need their own main
-list (REMOVE_ITEM SRC_FILES main.cpp)
-add_executable(tests-main ${TEST_FILES})
+list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/main.cpp)
+add_executable(tests-main ${TEST_FILES} ${SRC_FILES})
 target_link_libraries(tests-main PRIVATE Catch2::Catch2)
 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_FILES})
