--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,9 @@ cmake_minimum_required(VERSION 3.22)
 project(project
   VERSION 0.0.1)
 
-SET (CMAKE_CXX_FLAGS_INIT "-Wall -std=c++20")
+set(CMAKE_CXX_FLAGS_INIT "-Wall -std=c++20")
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
@@ -14,6 +15,8 @@ set(PROJECT_SOURCE_LIB_MODULE "${PROJECT_SOURCE_DIR}/ecs")
 set(PROJECT_INCLUDE_DIR "include")
 set(PROJECT_SPHINX_DIR "docs_sphinx")
 set(PROJECT_TEST_DIR "tests")
+
+INCLUDE_DIRECTORIES("./include/")
 
 file (GLOB SRC_FILES
   "${PROJECT_SOURCE_LIB_MODULE}/*.cpp")
@@ -35,8 +38,7 @@ add_executable(tests ${SRC_FILES} ${INCLUDE_FILES})
 target_link_libraries(tests PRIVATE Catch2 Catch2::Catch2WithMain)
 
 # These tests need their own main
-list(REMOVE_ITEM SRC_FILES ${PROJECT_SOURCE_DIR}/main.cpp)
-add_executable(tests-main ${TEST_FILES} ${SRC_FILES})
+add_executable(tests-main "${PROJECT_TEST_DIR}/main.cpp" ${TEST_FILES} ${SRC_FILES})
 target_link_libraries(tests-main PRIVATE Catch2::Catch2)
 
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_FILES})
